--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         I am a full-stack developer with an interest in creating apps that creativly solve problems.  I have a diverse background ranging from customer service and root cause analysis to being a professional musician and songwriter.
                     </div>
                     <div class="col-sm 4 text-center v-center">
-                        <img src="/Users/damianoramas/Desktop/Dom Projects/domoramas.github.io/nttHIfYHSrq%NN3vu%5+BA_thumb_d3f.jpg" class= "img-fluid rounded-circle" alt="me looking serious">
+                        <img src="nttHIfYHSrq%NN3vu%5+BA_thumb_d3f.jpg" class= "img-fluid rounded-circle" alt="me looking serious">
                     </div>
                     <div class="col-sm-4 about-col">
                         <p>
@@ -158,7 +158,7 @@
                 <div class="row">
                     <div class="row padded-row lined-row portfolio-highlight">
                         <div class="col-sm-4 col-sm-push-8 hide-mobile">
-                            <img class= "img-fluid" src="/Users/damianoramas/Desktop/Dom Projects/domoramas.github.io/screenshotcode.jpg" alt="screenshot of python code">
+                            <img class= "img-fluid" src="screenshotcode.jpg" alt="screenshot of python code">
                         </div>
                         <div class="col-sm-8 col-sm-pull-4">
                             <h3>Python Project</h3>
