--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Dom Oramas, Developer</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Arimo|Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lalezar|Roboto" rel="stylesheet">
     <link rel= "stylesheet" href="site.css">
   </head>
   <body class="container-fluid">
@@ -39,7 +39,7 @@
                     <br>
                     <br>
                     <br>
-                    <h1 class="display-4 text-center"style="color: white">Dom Oramas</h1>
+                    <h1 class="display-4 text-center title"style="color: white">Dom Oramas</h1>
                 </div>
             </div>
     </section>
