--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             Portland, OR
                         <br>
                     
-                        <a href="mailto:boombappro@gmail.com">
+                        <a href="mailto:dom@domoramas.com">
                             dom@domoramas.com
                         </a>
                     </p>
@@ -192,7 +192,7 @@
                             Portland, OR
                         </p>
                         <p>
-                            <a href="mailto:boombappro@gmail.com">
+                            <a href="mailto:dom@domoramas.com">
                                 dom@domoramas.com</a>
                         </p>
                         <div class="button-links">
