added glyphs and fixed title background width

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Dom Oramas, Developer</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lalezar|Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel= "stylesheet" href="site.css">
   </head>
   <body class="container-fluid">
@@ -68,7 +69,7 @@
                             Portland, OR
                         <br>
                     
-                        <a href="mailto:dom@domoramas.com">
+                        <a href="mailto:dom@domoramas.com"><i class="far fa-envelope"></i>
                             dom@domoramas.com
                         </a>
                     </p>
@@ -192,13 +193,13 @@
                             Portland, OR
                         </p>
                         <p>
-                            <a href="mailto:dom@domoramas.com">
+                            <a href="mailto:dom@domoramas.com"><i class="far fa-envelope"></i>
                                 dom@domoramas.com</a>
                         </p>
                         <div class="button-links">
-                            <a class="btn btn-outline-secondary" href="https://github.com/domoramas" target="_blank">
+                            <a class="btn btn-outline-secondary" href="https://github.com/domoramas" target="_blank"><i class="fab fa-github-square"></i>
                             GitHub</a>
-                            <a class="btn btn-outline-secondary" href="https://www.linkedin.com/in/damian-oramas-4797b2163" target="_blank">
+                            <a class="btn btn-outline-secondary" href="https://www.linkedin.com/in/damian-oramas-4797b2163" target="_blank"><i class="fab fa-linkedin"></i>
                             LinkedIn</a>
                         </div>
                     </div>
