--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
                             <li>Python</li>
                             <li>Html</li>
                             <li>CSS</li>
+                            <li>Javascript</li>
+                            <li>Django</li>
                             <li>Bootstrap</li>
                             <li>Git/GitHub</li>
                         </ul>
@@ -114,6 +116,7 @@
                             <li>C#</li>
                             <li>Virtual Reality</li>
                             <li>React</li>
+                            <li>Vue</li>
                         </ul>
                     </div>
                 </div>
