--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                             <img class= "img-fluid" src="screenshotcode.jpg" alt="screenshot of python code">
                         </div>
                         <div class="col-sm-8 col-sm-pull-4">
-                            <h3 href= "https://github.com/domoramas/class_redmage/blob/test/code/Dom/python%20labs/datenight.py">Python Project - Date Night</h3>
+                            <h3><a href= "https://github.com/domoramas/class_redmage/blob/test/code/Dom/python%20labs/datenight.py">Python Project - Date Night</a></h3>
                             <p>
                                 During my Full-Stack developer coursework at PDX Code Guild, I was tasked with creating a project in python utilizing outside liberaries.  I designed an application that randomly picks a dinning location within the users area and up to three different activites that are near.  The challange was utilizing Yelps API and parsing the information to get the information I needed.
                             </p>
