--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         I am a full-stack developer with an interest in creating apps that creativly solve problems.  I have a diverse background ranging from customer service and root cause analysis to being a professional musician and songwriter.
                     </div>
                     <div class="col-sm 4 text-center v-center">
-                        <img src="profile.jpg" class= "img-fluid rounded-circle" alt="me looking serious">
+                        <img src="dom.jpg" class= "img-fluid rounded-circle" alt="me looking serious">
                     </div>
                     <div class="col-sm-4 about-col">
                         <p>
