--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                     </div>
                 </div>
             </div>
+            <!-- add the other projects ----->
             <!-- Grid End -->
         </div>
     </section>
