added grocerylist app to portfolio

--- a/index.html
+++ b/index.html
@@ -164,6 +164,21 @@
                 <div class="row">
                     <div class="row padded-row lined-row portfolio-highlight">
                         <div class="col-sm-4 col-sm-push-8 hide-mobile">
+                            <img class= "img-fluid" src="grocerylist.png" alt="screenshot of grocerylist app">
+                        </div>
+                        <div class="col-sm-8 col-sm-pull-4">
+                            <h3><a href= "https://domoramas.com/grocerylist">Simple Grocery List React App</a></h3>
+                            <p>
+                                This was a quick project I did to get a better understading of React.  This app allows you to add grocery list items, change the quantity, cross off the item when completed and delete the item. Click on the screenshot to try it out!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="row padded-row lined-row portfolio-highlight">
+                        <div class="col-sm-4 col-sm-push-8 hide-mobile">
                             <img class= "img-fluid" src="screenshotcode.jpg" alt="screenshot of python code">
                         </div>
                         <div class="col-sm-8 col-sm-pull-4">
