--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <div class="col-sm-8 col-sm-pull-4">
                             <h3><a href= "https://domoramas.com/grocerylist">Simple Grocery List React App</a></h3>
                             <p>
-                                This was a quick project I did to get a better understading of React.  This app allows you to add grocery list items, change the quantity, cross off the item when completed and delete the item. Click on the screenshot to try it out!
+                                This was a quick project I did to get a better understading of React.  This app allows you to add grocery list items, change the quantity, cross off the item when completed and delete the item. Click on the link to try it out!
                             </p>
                         </div>
                     </div>
