--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                             Portland, OR
                         <br>
                     
-                        <a href="mailto:dom@domoramas.com"><i class="far fa-envelope"></i>
+                       <!-- <a href="mailto:dom@domoramas.com"><i class="far fa-envelope"></i>
                             dom@domoramas.com
-                        </a>
+                        </a> -->
                     </p>
                    
                 </div>
